Fix code indentation across the project